<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.details.DetailsFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:paddingVertical="@dimen/space2"
            android:paddingHorizontal="@dimen/space4"
            android:gravity="center_vertical"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/big">

            <TextView
                android:text="@string/show_details_activity_title"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_big"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:padding="@dimen/space2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtInfoCidade"
                        android:text="@string/txt_info_default_cidade"
                        style="@style/txtInfo"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/txtInfoTemperatura"
                        android:text="@string/txt_info_celsius"
                        style="@style/txtInfo"
                        android:gravity="end"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtInfoMinima"
                        android:text="@string/txt_info_minima"
                        style="@style/txtInfo"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/txtInfoMaxima"
                        android:text="@string/txt_info_maxima"
                        style="@style/txtInfo"
                        android:gravity="end"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/txtInfoLatitude"
                    android:text="@string/txt_info_latitude"
                    style="@style/txtInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtInfoLongitude"
                    android:text="@string/txt_info_longitude"
                    style="@style/txtInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/imgInfoClima"
                android:src="@drawable/ic_sunny"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:paddingHorizontal="@dimen/space2"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/txt_info_wind"
                    style="@style/txtInfo"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtInfoWind"
                    style="@style/txtInfo"
                    android:gravity="end"
                    android:text="m/s"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/txt_info_visibilidade"
                    style="@style/txtInfo"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtInfoVisibility"
                    style="@style/txtInfo"
                    android:gravity="end"
                    android:text="@string/txt_info_kilometers"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/txt_info_umidade"
                    style="@style/txtInfo"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtInfoUmidade"
                    style="@style/txtInfo"
                    android:gravity="end"
                    android:text="@string/txt_info_percent"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/txt_info_pressure"
                    style="@style/txtInfo"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtInfoPressao"
                    style="@style/txtInfo"
                    android:gravity="end"
                    android:text="@string/txt_info_hectopascal"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>