<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.main.MainFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:paddingVertical="@dimen/space2"
            android:paddingHorizontal="@dimen/space4"
            android:gravity="center_vertical"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/big">

            <TextView
                android:text="@string/main_activity_title"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_big"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <ImageButton
                android:id="@+id/btnAddCidade"
                android:background="@color/colorPrimary"
                android:tooltipText="@string/add_cities_tooltip"
                android:src="@drawable/ic_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            android:background="@color/white"
            android:id="@+id/txtLastUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_normal"
            android:padding="@dimen/space2"/>

        <androidx.recyclerview.widget.RecyclerView
            android:visibility="gone"
            android:id="@+id/listHomepage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/txtNoCities"
            android:textSize="@dimen/txt_normal"
            android:text="@string/nenhuma_cidade_selecionada"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginHorizontal="@dimen/space4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>

</FrameLayout>